--- a/src/index.css
+++ b/src/index.css
@@ -15,18 +15,19 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: whitesmoke;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+
+nav > a:hover {
+  color: slategray;
 }
 
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  text-align: center;
+  
 }
 
 .starship-container {
@@ -35,7 +36,7 @@ body {
   gap: 20px;
   margin: 75px;
   padding: 10px;
-  /* max-width: 1200px; */
+  max-width: fit-content;
 }
 
 .starship-card {
@@ -47,11 +48,54 @@ body {
   border: 1px solid white;
   border-radius: 8px;
   padding: 5px;
+  background-color: #1a1a1a;
+}
+
+.starship-card:hover {
+  background-color: darkslategray;
 }
 
 .starship-card > h2 {
   margin: 5px;
+  text-align: center;
 }
+
+.starship-details-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+}
+
+.starship-details-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  border: 1px solid white;
+  border-radius: 8px;
+  max-width: 500px;
+  max-height: fit-content;
+  padding: 15px;
+  font-size: 20px;
+  background-color: rgb(28, 49, 49);
+}
+
+.line-detail {
+  display: flex;
+  gap: 5px; 
+  align-items: center;
+  justify-content: start;
+}
+
+.line-detail > label {
+  width: 100px;
+}
+
+.line-detail > p {
+  margin: 10px;
+}
+
 
 h1 {
   font-size: 3.2em;
