--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,21 @@
+a {
+  color: whitesmoke;
+  text-decoration: inherit;
+}
+
 nav {
   display: flex;
   justify-content: center;
   background-color: black;
 }
 
-nav > h1 {
-  margin: 10px;
+h1 {
+  font-size: 2.5rem;
+  margin: 2rem;
 }
 
+nav > a:hover {
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
 
 
