--- a/src/index.css
+++ b/src/index.css
@@ -5,29 +5,17 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: whitesmoke;
-  text-decoration: inherit;
-}
-
-nav > a:hover {
-  color: slategray;
-}
-
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  
+  background-color: dimgrey;
 }
 
 .starship-container {
@@ -45,10 +33,10 @@ body {
   align-items: center;
   width: 250px;
   height: 100px;
-  border: 1px solid white;
   border-radius: 8px;
   padding: 5px;
   background-color: #1a1a1a;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .starship-card:hover {
@@ -72,44 +60,40 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   border-radius: 8px;
   max-width: 500px;
   max-height: fit-content;
   padding: 15px;
-  font-size: 20px;
+  font-size: 25px;
   background-color: rgb(28, 49, 49);
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .line-detail {
   display: flex;
-  gap: 5px; 
-  align-items: center;
+  gap: 15px; 
+  align-items: start;
   justify-content: start;
+  margin: 20px;
 }
 
 .line-detail > label {
   width: 100px;
 }
 
-.line-detail > p {
-  margin: 10px;
-}
-
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.line-detail > p, ul {
+  margin: 0px;
+  font-size: ;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  font-size: 1.5rem;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: black;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -119,6 +103,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.back-button {
+  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: light) {
